@@ -26,6 +26,9 @@
 	<LI>HTMLDOC should now compile out-of-the-box using the
 	Cygwin tools.
 
+	<LI>HTMLDOC no longer inserts whitespace between text
+	inside DIV elements.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>"make install" didn't work in the fonts directory.
